<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="authType"
            type="String" />

        <variable
            name="viewModel"
            type="net.synapticweb.cipherpass.settings.SettingsViewModel" />
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:visibility="@{viewModel.shouldShowWarning() ? View.VISIBLE : View.GONE}"
        android:text='@{authType == "system" ? @string/system_lock_soft_warning : @string/no_lock_soft_warning}'
        android:id="@+id/soft_storage_warning"/>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:visibility="@{viewModel.shouldShowWarning() ? View.VISIBLE : View.GONE}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/stop_showing_warning_box"
        android:weightSum="10">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/stop_showing_warning"
            android:layout_weight="1.5"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:layout_weight="8.5"
            android:text="@string/stop_showing"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="@{viewModel.shouldShowWarning() ? View.GONE : View.VISIBLE}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_layout"
        android:hint="@string/passphrase_hint"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="start"
            android:id="@+id/passphrase"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:maxWidth="50dp"
        android:layout_margin="15dp"
        android:indeterminate="true"
        android:layout_gravity="center_horizontal"
        android:visibility="@{viewModel.working ? View.VISIBLE : View.GONE}"
        android:id="@+id/progress" />

</LinearLayout>

</layout>